Project E_restaurant_id {
  database_type: 'PostgreSQL'
  Note: 'Documentación de base de datos para ERD'
}

// --- USUARIOS Y ROLES ---

Enum role {
  client
  admin
  chef
  cashier
}

Table users {
  user_id       int          [pk, increment]
  user_name     varchar(25)  [not null, unique]
  email         varchar      [not null]
  first_name    varchar(25)  [not null]
  last_name     varchar(25)
  country_code  char(3)
  user_role     role         [not null]
  created_at    timestamp    [default: `now()`, note: "with zone"]
  is_active     bool         [default: true, not null]
  password_hash varchar(255) [not null]
}

// --- RESTAURANTES ---

Table restaurants {
  restaurant_id   int     [pk, increment]
  restaurant_name varchar [not null]
  address         varchar [not null]
  is_active       bool    [not null, default: true]
  is_open         bool    [not null, default: false]
}

Table restaurant_staff {
  restaurant_id int [ref: > restaurants.restaurant_id]
  user_id       int [ref: - users.user_id]

  indexes       {
    (restaurant_id,user_id) [pk]
  }

}

// --- MENÚ E INVENTARIO ---

Enum measure_unit {
  u // Unity
  kg // kilogram
  g // gram
  l // liter
  ml // mili liter
}

Table dishes {
  dish_id       int           [pk, increment]
  restaurant_id int           [not null, ref: > restaurants.restaurant_id]
  dish_name     varchar       [not null]
  price         decimal(10,2) [not null]
}

Table ingredients {
  ingredient_id   int            [pk]
  ingredient_name varchar        [not null]
  price           decimal (10,2) [not null, note: "CHECK (price >= 0)"]
}

Table inventories {
  inventory_id    int           [pk, increment]
  restaurant_id   int           [not null, ref: > restaurants.restaurant_id]
  ingredient_id   int           [not null, ref: > ingredients.ingredient_id]
  stock           decimal(10,3) [not null, note: "CHECK (stock >= 0)"]
  unit            measure_unit  [not null]
  expiration_date date
}

Table needed_ingredients {
  dish_id         int            [not null, ref: > dishes.dish_id]
  ingredient_id   int            [not null, ref: > ingredients.ingredient_id]
  needed_quantity decimal (10,2) [not null]

  unit            measure_unit   [not null]

  is_optional     bool           [default: false]

  indexes         {
  (dish_id,       ingredient_id) [pk]
  }

}

Table lost_inventories {
  lost_id      int            [pk, increment]
  inventory_id int            [not null, ref: > inventories.inventory_id]
  quantity     decimal(10,3)  [not null]

  unit         measure_unit   [not null]

  unit_price   decimal (10,2) [not null]
  date_event   timestamp      [default: `now()`]
}

// --- ÓRDENES ---

Enum order_status {
  received
  in_processing
  completed
  canceled
}

Table orders {
  order_id      int          [pk, increment]
  user_id       int          [not null, ref: > users.user_id]
  restaurant_id int          [not null, ref: > restaurants.restaurant_id]
  created_at    timestamp    [default: `now()`]
  status        order_status [not null, default: 'received']
}

Table order_items {
  order_item_id   int           [pk, increment]
  order_id        int           [not null, ref: > orders.order_id]
  dish_id         int           [not null, ref: > dishes.dish_id]


  quantity        int           [not null, default: 1]
  price_at_moment decimal(10,2) [not null]
}

// --- PAGOS ---

Enum payment_status {
  pending
  succeeded
  failed
  refunded
}

Enum payment_method {
  cash
  stripe
  paypal
  mercadopago
}

Table payments {
  payment_id int            [pk, increment]
  user_id    int            [not null, ref: > users.user_id]
  order_id   int            [not null, ref: > orders.order_id]
  amount     decimal(10,2)  [not null]
  currency   char(3)        [not null, default: "USD"]
  status     payment_status [not null]
  method     payment_method [not null]
  created_at timestamp      [default: `now()`]
}